test_suite/alan-2022-examples/failing/006960_mutation.alan
source q begin put begin end
